WebCore/platform/graphics/qt/StillImageQt.h
@@ -39,6 +39,11 @@ namespace WebCore {
             return adoptRef(new StillImage(pixmap));
         }
 
+        static PassRefPtr<StillImage> createForRendering(const QPixmap* pixmap)
+        {
+            return adoptRef(new StillImage(pixmap));
+        }
+
         // FIXME: StillImages are underreporting decoded sizes and will be unable
         // to prune because these functions are not implemented yet.
         virtual void destroyDecodedData(bool destroyAll = true) { Q_UNUSED(destroyAll); }
@@ -50,8 +55,11 @@ namespace WebCore {
 
     private:
         StillImage(const QPixmap& pixmap);
+        StillImage(const QPixmap* pixmap);
+        ~StillImage();
         
-        QPixmap m_pixmap;
+        const QPixmap* m_pixmap;
+        bool m_ownsPixmap;
     };
 
 }
